[project]
name = "particle-size-distribution"
version = "0.1.0"
description = "Analyze microscope images and annotate particle size distributions."
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.9",
    "numpy>=2.0",
    "opencv-python>=4.10",
    "pandas>=2.2",
]

[tool.uv]
package = false
